# lcore-node

./: .gitignore  Cargo.toml  Dockerfile  README.md  dapp-address.json  deploy-testnet.yml
.cargo/: config.toml.bak
db/: schema.sql
deployments/kcchain/: lcore-node.json  rollups.json
snapshots/: config.json  hash
src/: api.rs  config.rs  database.rs  database_test.rs  device_auth.rs  encryption.rs  error.rs  lib.rs  main.rs
