[package]
name = "lcore-node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# Encryption (MVP)
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"

# Configuration
config = "0.14"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
httpc-test = "0.1"

[[bin]]
name = "lcore-node"
path = "src/main.rs"
