[package]
name = "lcore-node"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core async runtime
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error Handling
anyhow = "1.0"

# Cartesi Integration
json = "0.12"
hyper = { version = "0.14", features = ["http1", "runtime", "client", "server"] }

[[bin]]
name = "dapp"
path = "src/main.rs"
