[package]
name = "dapp"
version = "0.1.0"
edition = "2021"

[dependencies]
# Cartesi
json = "0.12.4"
hyper = { version = "0.14.27", features = ["full"] }
tokio = { version = "1.28.2", features = ["full"] }
hex = "0.4.3"

# Database
rusqlite = { version = "0.29.0", features = ["bundled"] }

# L-Core Features
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
anyhow = "1.0.71"
thiserror = "1.0.40"
sha2 = "0.10.6"
base64 = "0.21.2"
uuid = { version = "1.8.0", features = ["v4"] }
chrono = { version = "0.4.26", features = ["serde"] }

# Encryption
aes-gcm = "0.10.2"
chacha20poly1305 = "0.10.1"
byteorder = "1.4"

# Authentication
josekit = "0.8.0"

[dev-dependencies]
ed25519-dalek = { version = "1.0.1", features = ["rand"] }
rand = "0.7.3"
base64 = { version = "0.21.2", default-features = false }
